--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,7 @@
+tbody{
+  border-color: DimGray;
+}
+
 .cell {
   margin-bottom: 1rem;
 }
@@ -35,3 +39,5 @@ div.description {
   font-size: 135%;
   opacity: 70%;
 }
+
+ 
